--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ Nav start
     width: 25%;
 }
 
-#selected-players {
+#selectedPlayers {
     width: 100%;
     height: 318px;
     background-color: black;
@@ -82,11 +82,32 @@ Nav start
     padding-top: 40px;
 }
 
-#selected-players h2 {
+#selectedPlayers h2 {
     color: #FFFFFF;
     text-align: center;
     margin: 0 auto 0 auto;
 }
+
+#selectedPlayers p {
+    color: #FFFFFF;
+    text-align: center;
+    margin: 5px auto 0 auto;
+}
+
+#selectedPlayers ul {
+    color: #FFFFFF;
+    margin: 0 auto 0 auto;
+    font-size: 20px;
+    margin-top: 30px;
+}
+
+li {
+    color: #FFFFFF;
+    margin: 0 auto 0 auto;
+    font-size: 20px;
+    margin-bottom: 25px;
+}
+
 
 #budget {
     margin-top: 50px;
@@ -145,13 +166,14 @@ player-box start
 
 .player-box button {
     margin: 5% auto 5% auto;
-    background-color: #015196;
     width: 80%;
     border: 2px solid #161616;
     padding: 2% 5%;
     border-radius: 5px;
     color: #FFFFFF;
     font-size: 20px;
+
+
 }
 
 .player-box h1 {
@@ -159,6 +181,55 @@ player-box start
     margin-top: 3%;
     margin-bottom: 5%;
     font-size: 30px;
+}
+
+
+
+.modal {
+    display: none;
+    /* Hidden by default */
+    position: fixed;
+    /* Stay in place */
+    z-index: 1;
+    /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%;
+    /* Full width */
+    height: 100%;
+    /* Full height */
+    overflow: auto;
+    /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0);
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4);
+    /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
 }
 
 
