--- a/style.css
+++ b/style.css
@@ -112,10 +112,13 @@ li {
 #budget {
     margin-top: 50px;
     width: 100%;
-    height: 400px;
+    height: 500px;
     background-color: black;
     border-radius: 5%;
     padding-top: 40px;
+    color: #FFFFFF;
+    text-align: center;
+
 }
 
 #budget h2 {
@@ -123,6 +126,108 @@ li {
     text-align: center;
     margin: 0 auto 0 auto;
 }
+
+#playerCost {
+    display: flex;
+    justify-content: space-around;
+    font-size: 20px;
+    margin-top: 25px;
+}
+
+#playerCost p {
+    margin: 0;
+}
+
+#playerCost input {
+    height: 30px;
+    width: 100px;
+    background-color: black;
+    border: 1px solid #fefefe;
+    border-radius: 5px;
+}
+
+
+#playerCostButton {
+    margin: 5% auto 5% auto;
+    width: 80%;
+    border: 2px solid #161616;
+    padding: 2% 5%;
+    border-radius: 5px;
+    color: #FFFFFF;
+    font-size: 20px;
+    background-color: #015196;
+    cursor: pointer;
+}
+
+
+#playerExpenses {
+    display: flex;
+    justify-content: space-around;
+    font-size: 20px;
+}
+
+
+#manager {
+    display: flex;
+    justify-content: space-around;
+    font-size: 20px;
+    margin-top: 25px;
+}
+
+#manager p {
+    margin: 0;
+}
+
+#manager input {
+    height: 30px;
+    width: 100px;
+    background-color: black;
+    border: 1px solid #fefefe;
+    border-radius: 5px;
+}
+
+
+
+#coach {
+    display: flex;
+    justify-content: space-around;
+    font-size: 20px;
+    margin-top: 25px;
+}
+
+#coach p {
+    margin: 0;
+}
+
+#coach input {
+    height: 30px;
+    width: 100px;
+    background-color: black;
+    border: 1px solid #fefefe;
+    border-radius: 5px;
+    margin-left: 20px;
+}
+
+
+#totalCostButton {
+    margin: 5% auto 5% auto;
+    width: 80%;
+    border: 2px solid #161616;
+    padding: 2% 5%;
+    border-radius: 5px;
+    color: #FFFFFF;
+    font-size: 20px;
+    background-color: #015196;
+    cursor: pointer;
+}
+
+
+#calculation {
+    display: flex;
+    justify-content: space-around;
+    font-size: 20px;
+}
+
 
 /* ---------------------------
 Nav end
@@ -143,6 +248,7 @@ Players-body start
     grid-template-columns: 1fr 1fr 1fr;
     row-gap: 2%;
     column-gap: 2%;
+    height: 600px;
 
 }
 
