--- a/style.css
+++ b/style.css
@@ -144,6 +144,7 @@ li {
     background-color: black;
     border: 1px solid #fefefe;
     border-radius: 5px;
+    color: #FFFFFF;
 }
 
 
@@ -184,6 +185,7 @@ li {
     background-color: black;
     border: 1px solid #fefefe;
     border-radius: 5px;
+    color: #FFFFFF;
 }
 
 
@@ -206,6 +208,7 @@ li {
     border: 1px solid #fefefe;
     border-radius: 5px;
     margin-left: 20px;
+    color: #FFFFFF;
 }
 
 
